# get-live-information

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  refresh-public.yml
mock_posts/: correction_update.json  day_before_reminder.json  initial_announcement.json  large_sample_events.json  non_event_posts.json  same_day_reminder.json  second_event_same_date.json  second_event_same_venue_same_date.json  sold_out.json  timetable_update.json
mock_posts/real_samples/: README.md  info_myojou_after_parser_fix.json  info_myojou_audit_20.json  info_myojou_backfill_100.json  info_myojou_first_fetch.json  info_myojou_note_tweet_audit_20.json  sample_fixtures.json
public/: app.js  calendar_helpers.js  events.before-multiday.json  events.json  events.mock.backup.json  index.html  styles.css
src/myojou_sync/: __init__.py  cli.py  config.py  env_validation.py  merger.py  models.py  normalization.py  parser.py  pipeline.py  public_output.py  public_validation.py  readiness.py  real_samples.py  sample_capture.py  state.py  x_archive.py  x_client.py
src/myojou_sync/sync/: __init__.py  notion.py  sheets.py
tests/: conftest.py  test_cli_safety.py  test_merger.py  test_normalization.py  test_notion_adapter.py  test_parser.py  test_public_calendar.py  test_public_readiness.py  test_state_and_x.py  test_x_archive.py
