[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myojou-live-sync"
version = "0.1.0"
description = "Sync @info_myojou live event information from X posts to Notion and Google Sheets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "requests>=2.31,<3",
    "notion-client>=2.2,<3",
    "gspread>=6.0,<7",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
myojou-sync = "myojou_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
